# runoak_on_pombase

./: .gitignore  enrichment_shajahan.sh  example_enrichment.sh  get_background_lists.py  get_data.sh  pyproject.toml  readme.md  shajahan.md  shajahan_make_gene_lists.py
lists/: example.tsv
pombase_queries/: all_genes.json  conserved_in_cerevisiae.json  conserved_in_humans_or_vertebrates.json  genes_with_GO_BP.json  genes_with_GO_CC.json  genes_with_GO_MF.json  genes_with_phenotypes.json  inviable_deletions.json  non_coding_rnas.json  protein_coding.json  protein_coding_unknown_process.json  viable_deletions.json
results/: example_FYPO_enrichment.tsv  example_GO_enrichment.tsv
