[tool.poetry]
name = "pombase-oak"
version = "0.1.0"
description = ""
authors = ["Manuel Lera Ramirez <manulera14@gmail.com>"]
readme = "README.md"
packages = [{include = "pombase_oak"}]

[tool.poetry.dependencies]
python = "^3.9"
oaklib = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
